[package]
authors = ["Sam <samhalpern58@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "veml7700"
version = "0.1.0"

[dependencies]
# core dependencies
cortex-m = "^0.6.3"
cortex-m-rt = "^0.6.12"
cortex-m-semihosting = "^0.3.5"
embedded-hal = "0.2.6"
# choose a panic handler
panic-halt = "^0.2.0"

[dependencies.stm32f4xx-hal]
version = "^0.10"
features = ["rt", "stm32f411"] # make sure your microcontroller matches this

[[bin]]
name = "veml7700"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
